# ussd-polyglot

./: .gitignore  docker-compose.integration.yml  fix_schemas.py
.github/workflows/: go-ci.yml  integration-ci.yml  proto-ci.yml  python-ci.yml  rust-ci.yml  security-scan.yml
deployments/edge/: docker-compose.edge.yml  edge-sync.py  k3s-edge-manifest.yaml
deployments/vault/: example-tenant-secrets.json  vault-agent-config.hcl  vault-policy.hcl
docs/: README.md  index.md
docs/adr/: ADR-001-hexagonal-cqrs.md
docs/api-reference/: grpc-contracts.md
docs/development/: ci-cd-strategy.md
docs/guardrails/: architecture.md  security.md
docs/implementation-guides/: ai-brain.md  database-schema-guide.md  go-orchestrator.md  ledger-query-service.md  messaging-engine.md  post-proto-development-strategy.md  python-gateway.md  rust-payment-engine.md  tenant-sdk-python.md
docs/operations/: disaster-recovery.md  multi-region-deployment.md  observability-runbook.md  runbook.md
go-orchestrator/: .dockerignore  Dockerfile  go.mod  go.sum
observability/: docker-compose.observability.yml
postgres-schema/: A000__timescale_compat.sql  V001__extensions_and_schemas.sql  V002__core_utilities.sql  V003__audit_event_sourcing.sql  V004__provider_adapters.sql  V005__jwt_session_tokens.sql  V006__core_transaction_log.sql  V007__core_movement_legs.sql  V008__core_movement_postings.sql  V009__redis_cache_schema.sql  V010__core_entity_sequences.sql  V011__core_agent_relationships.sql  V012__core_virtual_accounts.sql  V013__observability_metrics.sql  V014__consolidated_sessions.sql  V015__api_versioning.sql  V016__core_rejection_log.sql  V017__core_settlement_instructions.sql  V018__simplified_encryption.sql  V019__consolidated_suspense.sql  V020__core_liquidity_positions.sql  V021__core_reconciliation_runs.sql  V022__core_reconciliation_items.sql  V023__core_control_batches.sql  V024__core_chart_of_accounts.sql  V025__core_period_end_balances.sql  V026__core_exchange_rates.sql  V027__core_bad_debt_provision.sql  V028__core_idempotency_keys.sql  V029__core_audit_trail.sql  V030__app_application_registry.sql  V031__app_roles_permissions.sql  V032__app_account_membership.sql  V033__app_user_role_assignments.sql  V034__app_entitlement_limits.sql  V035__app_validation_rules.sql  V036__app_business_calendar.sql  V037__app_fiscal_periods.sql  V038__app_cutoff_times.sql  V039__app_tax_rates.sql  (+37 more)
protos/: buf.gen.yaml  buf.yaml
python-gateway/: .dockerignore  .gitignore  Dockerfile  requirements.txt  run.py
rust-engine/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.ledger-query  Dockerfile.messaging  Dockerfile.payment  Dockerfile.reconciliation  Dockerfile.session
rust-engine/audit/: Cargo.toml
rust-engine/audit/src/: main.rs
rust-engine/audit/src/application/: audit.rs
rust-engine/audit/src/domain/: error.rs  merkle.rs  mod.rs
rust-engine/audit/src/infrastructure/: mod.rs  postgres.rs  signing.rs  signing_backend.rs
rust-engine/audit/src/ports/: grpc.rs
rust-engine/common/: Cargo.toml  build.rs
rust-engine/common/src/: interceptors.rs  lib.rs  metrics.rs  telemetry.rs  tls.rs
rust-engine/ledger-query-service/: Cargo.toml
rust-engine/ledger-query-service/src/: lib.rs  main.rs
rust-engine/ledger-query-service/src/application/: coa_query.rs  handler.rs  ledger_query.rs  liquidity_query.rs  mod.rs  settlement_query.rs  suspense_query.rs  virtual_account_query.rs
rust-engine/ledger-query-service/src/domain/: account.rs  coa.rs  error.rs  liquidity.rs  mod.rs  pagination.rs  settlement.rs  suspense.rs  transaction.rs  virtual_account.rs
rust-engine/ledger-query-service/src/infrastructure/: mod.rs  postgres_read_model.rs
rust-engine/ledger-query-service/src/ports/: grpc.rs  mod.rs  read_model.rs
rust-engine/messaging-engine/: Cargo.toml
rust-engine/messaging-engine/src/: main.rs
rust-engine/messaging-engine/src/application/: broadcast.rs  handler.rs  mod.rs  retry.rs  send_otp.rs  send_sms.rs
rust-engine/messaging-engine/src/domain/: delivery.rs  error.rs  message.rs  mod.rs  provider.rs  template.rs
rust-engine/messaging-engine/src/infrastructure/: ecocash_adapter.rs  mod.rs  onemoney_adapter.rs  postgres_delivery.rs  postgres_template.rs  redis_rate_limit.rs  telecash_adapter.rs
rust-engine/messaging-engine/src/ports/: delivery_log.rs  grpc.rs  mod.rs  sms_provider.rs  template_store.rs
rust-engine/payment-engine/: Cargo.toml
rust-engine/payment-engine/src/: main.rs
rust-engine/payment-engine/src/application/: callback.rs  initiate.rs  mod.rs
rust-engine/payment-engine/src/domain/: error.rs  mod.rs  payment.rs  provider.rs
rust-engine/payment-engine/src/infrastructure/: mod.rs  outbox.rs  outbox_adapter.rs  postgres.rs  vault.rs
rust-engine/payment-engine/src/infrastructure/providers/: ecocash.rs  mod.rs
rust-engine/payment-engine/src/ports/: grpc.rs
rust-engine/reconciliation-engine/: Cargo.toml
rust-engine/reconciliation-engine/src/: main.rs
rust-engine/reconciliation-engine/src/application/: generate_report.rs  handler.rs  mod.rs  resolve_discrepancy.rs  start_reconciliation.rs
rust-engine/reconciliation-engine/src/domain/: discrepancy.rs  error.rs  matching_rule.rs  mod.rs  reconciliation_item.rs  reconciliation_run.rs  transaction.rs
rust-engine/reconciliation-engine/src/infrastructure/: mod.rs  postgres_recon_store.rs  postgres_transaction_source.rs  provider_statement_adapter.rs
rust-engine/reconciliation-engine/src/ports/: external_statement.rs  grpc.rs  mod.rs  recon_store.rs  transaction_source.rs
rust-engine/session-reconstructor/: Cargo.toml
rust-engine/session-reconstructor/src/: main.rs
rust-engine/session-reconstructor/src/application/: mod.rs  reconstruct.rs
rust-engine/session-reconstructor/src/domain/: error.rs  mod.rs  session.rs
rust-engine/session-reconstructor/src/infrastructure/: cache.rs  postgres.rs
rust-engine/session-reconstructor/src/ports/: grpc.rs
scripts/: deploy-k8s.sh  generate-certs.sh  generate_go.sh  generate_python.sh  run-integration-tests.sh  verify.sh
tests/integration/: run.sh  (+6 more)
(+223 files in other folders)
