[workspace]
members = [
    "common",
    "session-reconstructor",
    "payment-engine",
    "audit",
    "ledger-query-service",
    "messaging-engine",
    "reconciliation-engine",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rust_decimal = { version = "1.35", features = ["serde", "db-postgres"] }
async-trait = "0.1"
tokio-rustls = "0.25"
rustls-pemfile = "2"
prometheus = "0.13"
lazy_static = "1.4"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
