[package]
name = "ussd-kernel-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tonic = { workspace = true, features = ["tls"] }
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
walkdir = "2"
