[package]
name = "messaging-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "messaging-engine"
path = "src/main.rs"

[dependencies]
ussd-kernel-common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
dotenvy = "0.15"
async-trait.workspace = true
redis = { version = "0.25", features = ["tokio-comp"] }
