[package]
name = "payment-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ussd-kernel-common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
uuid.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2 = "0.10"
hex.workspace = true
rust_decimal.workspace = true
regex = "1"
constant_time_eq = "0.4"
rand = "0.8"
async-trait.workspace = true
prost-types.workspace = true
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[[bin]]
name = "payment-engine"
path = "src/main.rs"
