[package]
name = "reconciliation-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ussd-kernel-common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
prost.workspace = true
prost-types.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true
dotenvy = "0.15"
async-trait.workspace = true

[[bin]]
name = "reconciliation-engine"
path = "src/main.rs"
